--- a/debian/rules
+++ b/debian/rules
@@ -126,6 +126,7 @@ $(STAMP_DIR)/source.make:
 	#libapache-mod-perl
 	patch -d $(D) -p1 < debian/patches/mod-perl/DBD::Pg_mem_leak_workaround.diff
 	patch -d $(D) -p1 < debian/patches/mod-perl/GvCV-isn-t-an-lvalue-since-Perl-5.13.10
+	patch -d $(D) -p1 < debian/patches/mod-perl/fix_include_dir.diff
 
 $(STAMP_DIR)/configure-stamp: $(STAMP_DIR)/source.make $(STAMP_DIR)/configure-stamp-apache $(STAMP_DIR)/configure-stamp-perl $(STAMP_DIR)/configure-stamp-mod-perl
 	touch $(STAMP_DIR)/configure-stamp
